# scRGB2PQ

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sc2pq.cpp  sc2pq.h  sc2pq_asm.cpp  sc2pq_test.cpp
